Closed Bug 571735 Opened 16 years ago Closed 16 years ago

warning: unused variable ‘formType’ in nsGenericHTMLFormElement::UpdateEditableFormControlState()

Categories

(Core :: DOM: Core & HTML, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jdm, Assigned: wesongathedeveloper)

Details

Attachments

(1 file)

No description provided.
Attached patch PatchSplinter Review
Assignee: nobody → wesongathedeveloper
Status: NEW → ASSIGNED
Attachment #450940 - Flags: review?(bzbarsky)
Attachment #450940 - Flags: review?(bzbarsky) → review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: