Bug 571735.  Remove unused variable.  r=bzbarsky